gen/simpleParser.java
// Generated from C:/Users/anom/IdeaProjects/ANTLR_Tests/src\simple.g4 by ANTLR 4.9
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class simpleParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAMA=1, HAZ=2, INIC=3, INC=4, SUMA=5, RESIDUO=6, DIVISION=7, POTENCIA=8, 
		PRODUCTO=9, NEGATIVO=10, DIFERENCIA=11, REDONDEO=12, AZAR=13, MAYOR=14, 
		MENOR=15, AND=16, OR=17, IGUALES=18, ELEMENTO_AZAR=19, LONGITUD=20, ULTIMO=21, 
		ELEMENTO_N=22, PRIMERO_LISTA=23, WHILE=24, DO_WHILE=25, IF_ELSE=26, IF=27, 
		DO_N=28, DO=29, AVANZA=30, RETROCEDE=31, ESPERA=32, GIRA_DERECHA=33, GIRA_IZQUIERDA=34, 
		OCULTA_TORTUGA=35, APARECE_TORTUGA=36, CENTRO=37, PON_POS=38, PONX=39, 
		PONY=40, PON_RUMBO=41, RUMBO=42, COLOR=43, SUBE_LAPIZ=44, BAJA_LAPIZ=45, 
		BORRADOR=46, BORRA_PANTALLA=47, TRUE=48, FALSE=49, MAS=50, MENOS=51, MULTI=52, 
		DIV=53, MY=54, MN=55, ASIGNAR=56, NOT=57, MYI=58, MNI=59, NEQ=60, BRACKET_ABIERTO=61, 
		BRACKET_CERRADO=62, PAR_ABIERTO=63, PAR_CERRADO=64, PAR_CUAD_ABIERTO=65, 
		PAR_CUAD_CERRADO=66, SEMICOLON=67, DOS_PUNTOS=68, COMILLA=69, ID=70, ENTERO=71, 
		ESPACIO_BLANCO=72;
	public static final int
		RULE_programa = 0, RULE_ejecuta = 1, RULE_repite = 2, RULE_si = 3, RULE_sisino = 4, 
		RULE_do_while = 5, RULE_mientras = 6, RULE_sentencia_logoTEC = 7, RULE_sentencia_general = 8, 
		RULE_ordenes_variables = 9, RULE_asignacion = 10, RULE_reasignacion = 11, 
		RULE_incrementa = 12, RULE_condicion = 13, RULE_ordenes_logicas = 14, 
		RULE_iguales = 15, RULE_and = 16, RULE_or = 17, RULE_mayor = 18, RULE_menor = 19, 
		RULE_operacion_aritmetica = 20, RULE_suma = 21, RULE_diferencia = 22, 
		RULE_producto = 23, RULE_potencia = 24, RULE_division = 25, RULE_residuo = 26, 
		RULE_redondear = 27, RULE_azar = 28, RULE_menos = 29, RULE_ordenes_listas = 30, 
		RULE_elegir = 31, RULE_elemento_n = 32, RULE_largo = 33, RULE_primero = 34, 
		RULE_ultimo = 35, RULE_ordenes_tortuga = 36, RULE_avanzar = 37, RULE_retroceder = 38, 
		RULE_girar_derecha = 39, RULE_girar_izquierda = 40, RULE_ocultar_tortuga = 41, 
		RULE_aparecer_tortuga = 42, RULE_definir_coord = 43, RULE_definir_x = 44, 
		RULE_definir_y = 45, RULE_definir_dir = 46, RULE_rumbo = 47, RULE_centrar = 48, 
		RULE_esperar = 49, RULE_ordenes_lienzo = 50, RULE_borrar = 51, RULE_dibujar = 52, 
		RULE_no_dibujar = 53, RULE_definir_color = 54, RULE_borra_pantalla = 55, 
		RULE_dato = 56, RULE_numero = 57;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "ejecuta", "repite", "si", "sisino", "do_while", "mientras", 
			"sentencia_logoTEC", "sentencia_general", "ordenes_variables", "asignacion", 
			"reasignacion", "incrementa", "condicion", "ordenes_logicas", "iguales", 
			"and", "or", "mayor", "menor", "operacion_aritmetica", "suma", "diferencia", 
			"producto", "potencia", "division", "residuo", "redondear", "azar", "menos", 
			"ordenes_listas", "elegir", "elemento_n", "largo", "primero", "ultimo", 
			"ordenes_tortuga", "avanzar", "retroceder", "girar_derecha", "girar_izquierda", 
			"ocultar_tortuga", "aparecer_tortuga", "definir_coord", "definir_x", 
			"definir_y", "definir_dir", "rumbo", "centrar", "esperar", "ordenes_lienzo", 
			"borrar", "dibujar", "no_dibujar", "definir_color", "borra_pantalla", 
			"dato", "numero"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Programa'", "'Haz'", "'INIC'", "'INC'", "'Suma'", "'Resto'", 
			"'Division'", "'Potencia'", "'Producto'", "'Menos'", "'Diferencia'", 
			"'Redondea'", "'Azar'", null, null, "'Y'", "'O'", null, "'Elegir'", "'Cuenta'", 
			null, "'Elemento'", null, null, null, "'SISINO'", "'SI'", "'REPITE'", 
			"'Ejecuta'", null, null, null, null, null, null, null, null, null, "'PonX'", 
			"'PonY'", "'PonRumbo'", "'Muestra RUMBO'", null, null, null, null, "'borrapantalla'", 
			"'TRUE'", "'FALSE'", "'+'", "'-'", "'*'", "'/'", "'>'", "'<'", "'='", 
			"'!'", "'>='", "'<='", "'!='", "'{'", "'}'", "'('", "')'", "'['", "']'", 
			"';'", "':'", "'\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROGRAMA", "HAZ", "INIC", "INC", "SUMA", "RESIDUO", "DIVISION", 
			"POTENCIA", "PRODUCTO", "NEGATIVO", "DIFERENCIA", "REDONDEO", "AZAR", 
			"MAYOR", "MENOR", "AND", "OR", "IGUALES", "ELEMENTO_AZAR", "LONGITUD", 
			"ULTIMO", "ELEMENTO_N", "PRIMERO_LISTA", "WHILE", "DO_WHILE", "IF_ELSE", 
			"IF", "DO_N", "DO", "AVANZA", "RETROCEDE", "ESPERA", "GIRA_DERECHA", 
			"GIRA_IZQUIERDA", "OCULTA_TORTUGA", "APARECE_TORTUGA", "CENTRO", "PON_POS", 
			"PONX", "PONY", "PON_RUMBO", "RUMBO", "COLOR", "SUBE_LAPIZ", "BAJA_LAPIZ", 
			"BORRADOR", "BORRA_PANTALLA", "TRUE", "FALSE", "MAS", "MENOS", "MULTI", 
			"DIV", "MY", "MN", "ASIGNAR", "NOT", "MYI", "MNI", "NEQ", "BRACKET_ABIERTO", 
			"BRACKET_CERRADO", "PAR_ABIERTO", "PAR_CERRADO", "PAR_CUAD_ABIERTO", 
			"PAR_CUAD_CERRADO", "SEMICOLON", "DOS_PUNTOS", "COMILLA", "ID", "ENTERO", 
			"ESPACIO_BLANCO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "simple.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public simpleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode PROGRAMA() { return getToken(simpleParser.PROGRAMA, 0); }
		public TerminalNode BRACKET_ABIERTO() { return getToken(simpleParser.BRACKET_ABIERTO, 0); }
		public TerminalNode BRACKET_CERRADO() { return getToken(simpleParser.BRACKET_CERRADO, 0); }
		public List<Sentencia_logoTECContext> sentencia_logoTEC() {
			return getRuleContexts(Sentencia_logoTECContext.class);
		}
		public Sentencia_logoTECContext sentencia_logoTEC(int i) {
			return getRuleContext(Sentencia_logoTECContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simpleListener ) ((simpleListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simpleListener ) ((simpleListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof simpleVisitor ) return ((simpleVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(PROGRAMA);
			setState(117);
			match(BRACKET_ABIERTO);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 2)) & ~0x3f) == 0 && ((1L << (_la - 2)) & ((1L << (HAZ - 2)) | (1L << (INIC - 2)) | (1L << (INC - 2)) | (1L << (SUMA - 2)) | (1L << (RESIDUO - 2)) | (1L << (DIVISION - 2)) | (1L << (POTENCIA - 2)) | (1L << (PRODUCTO - 2)) | (1L << (DIFERENCIA - 2)) | (1L << (REDONDEO - 2)) | (1L << (AZAR - 2)) | (1L << (MAYOR - 2)) | (1L << (MENOR - 2)) | (1L << (AND - 2)) | (1L << (OR - 2)) | (1L << (IGUALES - 2)) | (1L << (ELEMENTO_AZAR - 2)) | (1L << (LONGITUD - 2)) | (1L << (ULTIMO - 2)) | (1L << (ELEMENTO_N - 2)) | (1L << (PRIMERO_LISTA - 2)) | (1L << (DO_WHILE - 2)) | (1L << (IF_ELSE - 2)) | (1L << (IF - 2)) | (1L << (DO_N - 2)) | (1L << (DO - 2)) | (1L << (AVANZA - 2)) | (1L << (RETROCEDE - 2)) | (1L << (ESPERA - 2)) | (1L << (GIRA_DERECHA - 2)) | (1L << (GIRA_IZQUIERDA - 2)) | (1L << (OCULTA_TORTUGA - 2)) | (1L << (APARECE_TORTUGA - 2)) | (1L << (CENTRO - 2)) | (1L << (PON_POS - 2)) | (1L << (PONX - 2)) | (1L << (PONY - 2)) | (1L << (PON_RUMBO - 2)) | (1L << (RUMBO - 2)) | (1L << (COLOR - 2)) | (1L << (SUBE_LAPIZ - 2)) | (1L << (BAJA_LAPIZ - 2)) | (1L << (BORRADOR - 2)) | (1L << (BORRA_PANTALLA - 2)) | (1L << (MENOS - 2)) | (1L << (PAR_CUAD_ABIERTO - 2)))) != 0)) {
				{
				{
				setState(118);
				sentencia_logoTEC();
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(124);
			match(BRACKET_CERRADO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EjecutaContext extends ParserRuleContext {
		public TerminalNode DO() { return getToken(simpleParser.DO, 0); }
		public TerminalNode PAR_CUAD_ABIERTO() { return getToken(simpleParser.PAR_CUAD_ABIERTO, 0); }
		public TerminalNode PAR_CUAD_CERRADO() { return getToken(simpleParser.PAR_CUAD_CERRADO, 0); }
		public List<Ordenes_tortugaContext> ordenes_tortuga() {
			return getRuleContexts(Ordenes_tortugaContext.class);
		}
		public Ordenes_tortugaContext ordenes_tortuga(int i) {
			return getRuleContext(Ordenes_tortugaContext.class,i);
		}
		public EjecutaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ejecuta; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simpleListener ) ((simpleListener)listener).enterEjecuta(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simpleListener ) ((simpleListener)listener).exitEjecuta(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof simpleVisitor ) return ((simpleVisitor<? extends T>)visitor).visitEjecuta(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EjecutaContext ejecuta() throws RecognitionException {
		EjecutaContext _localctx = new EjecutaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ejecuta);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(DO);
			setState(127);
			match(PAR_CUAD_ABIERTO);
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AVANZA) | (1L << RETROCEDE) | (1L << ESPERA) | (1L << GIRA_DERECHA) | (1L << GIRA_IZQUIERDA) | (1L << OCULTA_TORTUGA) | (1L << APARECE_TORTUGA) | (1L << CENTRO) | (1L << PON_POS) | (1L << PONX) | (1L << PONY) | (1L << PON_RUMBO) | (1L << RUMBO))) != 0)) {
				{
				{
				setState(128);
				ordenes_tortuga();
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(134);
			match(PAR_CUAD_CERRADO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RepiteContext extends ParserRuleContext {
		public TerminalNode DO_N() { return getToken(simpleParser.DO_N, 0); }
		public TerminalNode PAR_CUAD_ABIERTO() { return getToken(simpleParser.PAR_CUAD_ABIERTO, 0); }
		public TerminalNode PAR_CUAD_CERRADO() { return getToken(simpleParser.PAR_CUAD_CERRADO, 0); }
		public List<Ordenes_tortugaContext> ordenes_tortuga() {
			return getRuleContexts(Ordenes_tortugaContext.class);
		}
		public Ordenes_tortugaContext ordenes_tortuga(int i) {
			return getRuleContext(Ordenes_tortugaContext.class,i);
		}
		public RepiteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repite; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simpleListener ) ((simpleListener)listener).enterRepite(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simpleListener ) ((simpleListener)listener).exitRepite(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof simpleVisitor ) return ((simpleVisitor<? extends T>)visitor).visitRepite(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RepiteContext repite() throws RecognitionException {
		RepiteContext _localctx = new RepiteContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_repite);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(DO_N);
			setState(137);
			match(PAR_CUAD_ABIERTO);
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AVANZA) | (1L << RETROCEDE) | (1L << ESPERA) | (1L << GIRA_DERECHA) | (1L << GIRA_IZQUIERDA) | (1L << OCULTA_TORTUGA) | (1L << APARECE_TORTUGA) | (1L << CENTRO) | (1L << PON_POS) | (1L << PONX) | (1L << PONY) | (1L << PON_RUMBO) | (1L << RUMBO))) != 0)) {
				{
				{
				setState(138);
				ordenes_tortuga();
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(144);
			match(PAR_CUAD_CERRADO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SiContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(simpleParser.IF, 0); }
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public TerminalNode PAR_CUAD_ABIERTO() { return getToken(simpleParser.PAR_CUAD_ABIERTO, 0); }
		public TerminalNode PAR_CUAD_CERRADO() { return getToken(simpleParser.PAR_CUAD_CERRADO, 0); }
		public List<Ordenes_tortugaContext> ordenes_tortuga() {
			return getRuleContexts(Ordenes_tortugaContext.class);
		}
		public Ordenes_tortugaContext ordenes_tortuga(int i) {
			return getRuleContext(Ordenes_tortugaContext.class,i);
		}
		public SiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_si; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simpleListener ) ((simpleListener)listener).enterSi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simpleListener ) ((simpleListener)listener).exitSi(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof simpleVisitor ) return ((simpleVisitor<? extends T>)visitor).visitSi(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SiContext si() throws RecognitionException {
		SiContext _localctx = new SiContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_si);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(IF);
			setState(147);
			condicion();
			setState(148);
			match(PAR_CUAD_ABIERTO);
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AVANZA) | (1L << RETROCEDE) | (1L << ESPERA) | (1L << GIRA_DERECHA) | (1L << GIRA_IZQUIERDA) | (1L << OCULTA_TORTUGA) | (1L << APARECE_TORTUGA) | (1L << CENTRO) | (1L << PON_POS) | (1L << PONX) | (1L << PONY) | (1L << PON_RUMBO) | (1L << RUMBO))) != 0)) {
				{
				{
				setState(149);
				ordenes_tortuga();
				}
				}
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(155);
			match(PAR_CUAD_CERRADO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SisinoContext extends ParserRuleContext {
		public TerminalNode IF_ELSE() { return getToken(simpleParser.IF_ELSE, 0); }
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public List<TerminalNode> PAR_CUAD_ABIERTO() { return getTokens(simpleParser.PAR_CUAD_ABIERTO); }
		public TerminalNode PAR_CUAD_ABIERTO(int i) {
			return getToken(simpleParser.PAR_CUAD_ABIERTO, i);
		}
		public List<TerminalNode> PAR_CUAD_CERRADO() { return getTokens(simpleParser.PAR_CUAD_CERRADO); }
		public TerminalNode PAR_CUAD_CERRADO(int i) {
			return getToken(simpleParser.PAR_CUAD_CERRADO, i);
		}
		public List<Ordenes_tortugaContext> ordenes_tortuga() {
			return getRuleContexts(Ordenes_tortugaContext.class);
		}
		public Ordenes_tortugaContext ordenes_tortuga(int i) {
			return getRuleContext(Ordenes_tortugaContext.class,i);
		}
		public SisinoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sisino; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simpleListener ) ((simpleListener)listener).enterSisino(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simpleListener ) ((simpleListener)listener).exitSisino(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof simpleVisitor ) return ((simpleVisitor<? extends T>)visitor).visitSisino(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SisinoContext sisino() throws RecognitionException {
		SisinoContext _localctx = new SisinoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sisino);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(IF_ELSE);
			setState(158);
			condicion();
			setState(159);
			match(PAR_CUAD_ABIERTO);
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AVANZA) | (1L << RETROCEDE) | (1L << ESPERA) | (1L << GIRA_DERECHA) | (1L << GIRA_IZQUIERDA) | (1L << OCULTA_TORTUGA) | (1L << APARECE_TORTUGA) | (1L << CENTRO) | (1L << PON_POS) | (1L << PONX) | (1L << PONY) | (1L << PON_RUMBO) | (1L << RUMBO))) != 0)) {
				{
				{
				setState(160);
				ordenes_tortuga();
				}
				}
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(166);
			match(PAR_CUAD_CERRADO);
			setState(167);
			match(PAR_CUAD_ABIERTO);
			setState(171);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AVANZA) | (1L << RETROCEDE) | (1L << ESPERA) | (1L << GIRA_DERECHA) | (1L << GIRA_IZQUIERDA) | (1L << OCULTA_TORTUGA) | (1L << APARECE_TORTUGA) | (1L << CENTRO) | (1L << PON_POS) | (1L << PONX) | (1L << PONY) | (1L << PON_RUMBO) | (1L << RUMBO))) != 0)) {
				{
				{
				setState(168);
				ordenes_tortuga();
				}
				}
				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(174);
			match(PAR_CUAD_CERRADO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
